[tool.poetry]
name = "ras-spt-discord-bot"
version = "0.1.0"
description = ""
authors = ["Eszter, Gábor <mrxaxen@gmail.com>"]
readme = "README.md"
packages = [
    {include = "ras_spt_discord_bot"},
    {include = "ras_spt_server_interface"}
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
fastapi = {extras = ["standard"], version = "^0.115.11"}
dotenv = "^0.9.9"
uvicorn = "^0.34.0"


python-on-whales = "^0.76.1"
py-cord = "^2.6.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-pyinstaller-plugin.scripts]
ras-spt-server-interface = { source = "ras_spt_server_interface/main.py", type = "onefile", bundle = false }
ras-spt-discord-bot = { source = "ras_spt_discord_bot/main.py", type = "onefile", bundle = false }

[tool.poetry.scripts]
ras-spt-sever-interface='ras_spt_server_interface.main:main'
ras-spt-discord-bot='ras_spt_discord_bot.main:main'
